wordpress-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-app-persist-service
spec:
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 30180
  selector:
    app: wordpress-app
  type: NodePort
