wordpress-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db
  labels:
    app: wordpress-db
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: wordpress-db
