wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: localhost
  rules:
  - host: wordpress-exercise-01.com
    http:
      paths:
      - backend:
          serviceName: wordpress-app-persist-service
          servicePort: 30180
